# whatsnext

./: .gitignore  .gitmodules  Cargo.toml  README.md  V4.md  ideas.js  index.js  init.sh  now.json  now_build.json  package-lock.json  package.json  serve.json  test.html  test.js  tsconfig.json  webpack.config.js  whatsnext.js  woodland2019.json
.github/workflows/: npm-publish.yml
examples/config_files/: MVHS2019-20_new.json  schedule2018-19.json  schedule2018-19_gms.json  woodland2019.json
examples/node/: index.js
examples/web/: MVHS2019-20.json  index.html  index.js  index_sim.html  options.html
examples/web/css/: index.css  options.css
examples/web/js/: index.js  options.js  whatsnext.web.js
js/: whatsnext.js
src/: .main.rs.swp  Time.ts  config.ts  generator.ts  lib.rs  main.rs  parse.rs  period.ts  sources.rs  timeline.ts  tsconfig.json  whatsnext.js  whatsnext.ts
test/: mvla2020-21.yaml  test.cjs  test.html  test.js  test.mjs  time-tests.ts  tsconfig.json  whatsnext-tests.js
whatsnext/: generator.ts  period.ts  schedule.ts  schedule2018-19.json  time.js  time.ts  whatsnext.js  whatsnext.ts
